--- a/docs/source/docker/docker-compose.yaml
+++ b/docs/source/docker/docker-compose.yaml
@@ -36,8 +36,8 @@ services:
     ports:
       - "9001:9000"
     environment:
-      MINIO_ACCESS_KEY: minio
-      MINIO_SECRET_KEY: minio123
+      MINIO_ACCESS_KEY: miniouser
+      MINIO_SECRET_KEY: minio1234
     command: server /data
 
 volumes:
